--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,13 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    env:
-      DB_INFO: ${{ secrets.DB_INFO }}
-      DB_HOST: ${{ secrets.DB_HOST }}
-      DB_USER: ${{ secrets.DB_USER }}
-      DB_PSWD: ${{ secrets.DB_PSWD }}
-      DB_NAME: ${{ secrets.DB_NAME }}
-      
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -25,8 +19,15 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Update application on EC2
+        env:
+        DB_INFO: ${{ secrets.DB_INFO }}
+        DB_HOST: ${{ secrets.DB_HOST }}
+        DB_USER: ${{ secrets.DB_USER }}
+        DB_PSWD: ${{ secrets.DB_PSWD }}
+        DB_NAME: ${{ secrets.DB_NAME }}
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.HOST }} << 'EOF'
+          export DB_HOST=${{ secrets.DB_HOST }} DB_USER=${{ secrets.DB_USER }} DB_PSWD=${{ secrets.DB_PSWD }} DB_NAME=${{ secrets.DB_NAME }}
           sudo systemctl daemon-reload
           cd /home/ec2-user/SteganographyProject
           git pull origin main
