--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,6 @@ jobs:
           cd /home/ec2-user/SteganographyProject
           git pull origin main
           source venv/bin/activate
-          pip install -r requirements.txt
+          #pip install -r requirements.txt
           sudo systemctl restart app.service
           EOF
